@@ -139,8 +139,7 @@ extern int sc_height;
 #define UTF8_MAX_LENGTH 4
 struct keyRecord
 {
-	WCHAR unicode;
-	int ascii;
+	LWCHAR unicode;
 	int scan;
 } currentKey;
 
@@ -2793,23 +2792,95 @@ public void putbs(void)
 }
 
 #if MSDOS_COMPILER==WIN32C
+
+#define LAST_DOWN_COUNT 8
+static LWCHAR last_downs[LAST_DOWN_COUNT] = { 0 };
+static int last_down_index = 0;
+static LWCHAR hi_surr = 0;
+
+typedef struct XINPUT_RECORD {
+	INPUT_RECORD ir;
+	LWCHAR ichar; /* because ir...UnicodeChar is only 16 bits */
+} XINPUT_RECORD;
+
+static void set_last_down(LWCHAR ch)
+{
+	if (ch == 0) return;
+	last_downs[last_down_index] = ch;
+	if (++last_down_index >= LAST_DOWN_COUNT)
+		last_down_index = 0;
+}
+
+static LWCHAR *find_last_down(LWCHAR ch)
+{
+	int i;
+	for (i = 0; i < LAST_DOWN_COUNT; ++i)
+		if (last_downs[i] == ch)
+			return &last_downs[i];
+	return NULL;
+}
+
+static int console_input(HANDLE tty, XINPUT_RECORD *xip)
+{
+	DWORD read;
+
+	for (;;)
+	{
+		PeekConsoleInputW(tty, &xip->ir, 1, &read);
+		if (read == 0)
+			return (FALSE);
+		ReadConsoleInputW(tty, &xip->ir, 1, &read);
+		if (read == 0)
+			return (FALSE);
+
+		if (xip->ir.EventType == KEY_EVENT) {
+			LWCHAR ch = xip->ir.Event.KeyEvent.uChar.UnicodeChar;
+			xip->ichar = ch;
+			if (!is_ascii_char(ch))
+			{
+				int is_down = xip->ir.Event.KeyEvent.bKeyDown;
+				LWCHAR *last_down = find_last_down(ch);
+
+				if (last_down == NULL) { /* key was up */
+					if (is_down) { /* key was up, now is down */
+						set_last_down(ch);
+					} else { /* key up without previous down: pretend this is a down. */
+						xip->ir.Event.KeyEvent.bKeyDown = TRUE;
+					}
+				} else if (!is_down) { /* key was down, now is up */
+					*last_down = 0; /* use this last_down only once */
+				}
+
+				if (ch >= 0xD800 && ch < 0xDC00) { /* high surrogate */
+					hi_surr = 0x10000 + ((ch - 0xD800) << 10);
+					continue; /* get next input, which should be the low surrogate */
+				}
+				if (ch >= 0xDC00 && ch < 0xE000) { /* low surrogate */
+					xip->ichar = hi_surr + (ch - 0xDC00);
+					hi_surr = 0;
+				}
+			}
+		}
+		return (TRUE);
+	}
+}
+
 /*
  * Determine whether an input character is waiting to be read.
  */
 public int win32_kbhit(void)
 {
-	INPUT_RECORD ip;
-	DWORD read;
+	XINPUT_RECORD xip;
 
 	if (keyCount > 0 || win_unget_pending)
 		return (TRUE);
 
-	currentKey.ascii = 0;
+	currentKey.unicode = 0;
 	currentKey.scan = 0;
 
 	if (x11mouseCount > 0)
 	{
-		currentKey.ascii = x11mousebuf[x11mousePos++];
+		currentKey.unicode = x11mousebuf[x11mousePos++];
 		--x11mouseCount;
 		keyCount = 1;
 		return (TRUE);
@@ -2821,63 +2892,51 @@ public int win32_kbhit(void)
 	 */
 	do
 	{
-		PeekConsoleInputW(tty, &ip, 1, &read);
-		if (read == 0)
+		if (!console_input(tty, &xip))
 			return (FALSE);
-		ReadConsoleInputW(tty, &ip, 1, &read);
-		/* generate an X11 mouse sequence from the mouse event */
-		if (mousecap && ip.EventType == MOUSE_EVENT &&
-		    ip.Event.MouseEvent.dwEventFlags != MOUSE_MOVED)
+
+		if (mousecap && xip.ir.EventType == MOUSE_EVENT &&
+		    xip.ir.Event.MouseEvent.dwEventFlags != MOUSE_MOVED)
 		{
-			x11mousebuf[3] = X11MOUSE_OFFSET + ip.Event.MouseEvent.dwMousePosition.X + 1;
-			x11mousebuf[4] = X11MOUSE_OFFSET + ip.Event.MouseEvent.dwMousePosition.Y + 1;
-			switch (ip.Event.MouseEvent.dwEventFlags)
+			/* Generate an X11 mouse sequence from the mouse event. */
+			x11mousebuf[3] = X11MOUSE_OFFSET + xip.ir.Event.MouseEvent.dwMousePosition.X + 1;
+			x11mousebuf[4] = X11MOUSE_OFFSET + xip.ir.Event.MouseEvent.dwMousePosition.Y + 1;
+			switch (xip.ir.Event.MouseEvent.dwEventFlags)
 			{
 			case 0: /* press or release */
-				if (ip.Event.MouseEvent.dwButtonState == 0)
+				if (xip.ir.Event.MouseEvent.dwButtonState == 0)
 					x11mousebuf[2] = X11MOUSE_OFFSET + X11MOUSE_BUTTON_REL;
-				else if (ip.Event.MouseEvent.dwButtonState & (FROM_LEFT_3RD_BUTTON_PRESSED | FROM_LEFT_4TH_BUTTON_PRESSED))
+				else if (xip.ir.Event.MouseEvent.dwButtonState & (FROM_LEFT_3RD_BUTTON_PRESSED | FROM_LEFT_4TH_BUTTON_PRESSED))
 					continue;
 				else
-					x11mousebuf[2] = X11MOUSE_OFFSET + X11MOUSE_BUTTON1 + ((int)ip.Event.MouseEvent.dwButtonState << 1);
+					x11mousebuf[2] = X11MOUSE_OFFSET + X11MOUSE_BUTTON1 + ((int)xip.ir.Event.MouseEvent.dwButtonState << 1);
 				break;
 			case MOUSE_WHEELED:
-				x11mousebuf[2] = X11MOUSE_OFFSET + (((int)ip.Event.MouseEvent.dwButtonState < 0) ? X11MOUSE_WHEEL_DOWN : X11MOUSE_WHEEL_UP);
+				x11mousebuf[2] = X11MOUSE_OFFSET + (((int)xip.ir.Event.MouseEvent.dwButtonState < 0) ? X11MOUSE_WHEEL_DOWN : X11MOUSE_WHEEL_UP);
 				break;
 			default:
 				continue;
 			}
 			x11mousePos = 0;
 			x11mouseCount = 5;
-			currentKey.ascii = ESC;
+			currentKey.unicode = ESC;
 			keyCount = 1;
 			return (TRUE);
 		}
-	} while (ip.EventType != KEY_EVENT ||
-		ip.Event.KeyEvent.bKeyDown != TRUE ||
-		(ip.Event.KeyEvent.wVirtualScanCode == 0 && ip.Event.KeyEvent.uChar.UnicodeChar == 0) ||
-		((ip.Event.KeyEvent.dwControlKeyState & (RIGHT_ALT_PRESSED|LEFT_CTRL_PRESSED)) == (RIGHT_ALT_PRESSED|LEFT_CTRL_PRESSED) && ip.Event.KeyEvent.uChar.UnicodeChar == 0) ||
-		ip.Event.KeyEvent.wVirtualKeyCode == VK_KANJI ||
-		ip.Event.KeyEvent.wVirtualKeyCode == VK_SHIFT ||
-		ip.Event.KeyEvent.wVirtualKeyCode == VK_CONTROL ||
-		ip.Event.KeyEvent.wVirtualKeyCode == VK_MENU);
+	} while (xip.ir.EventType != KEY_EVENT ||
+		xip.ir.Event.KeyEvent.bKeyDown != TRUE ||
+		((xip.ir.Event.KeyEvent.dwControlKeyState & (RIGHT_ALT_PRESSED|LEFT_CTRL_PRESSED)) == (RIGHT_ALT_PRESSED|LEFT_CTRL_PRESSED) && xip.ir.Event.KeyEvent.uChar.UnicodeChar == 0) ||
+		(xip.ir.Event.KeyEvent.wVirtualScanCode == 0 && xip.ir.Event.KeyEvent.uChar.UnicodeChar == 0) ||
+		(xip.ir.Event.KeyEvent.wVirtualKeyCode == VK_MENU && xip.ir.Event.KeyEvent.uChar.UnicodeChar == 0) ||
+		xip.ir.Event.KeyEvent.wVirtualKeyCode == VK_KANJI ||
+		xip.ir.Event.KeyEvent.wVirtualKeyCode == VK_SHIFT ||
+		xip.ir.Event.KeyEvent.wVirtualKeyCode == VK_CONTROL);
 		
-	currentKey.unicode = ip.Event.KeyEvent.uChar.UnicodeChar;
-	currentKey.ascii = ip.Event.KeyEvent.uChar.AsciiChar;
-	currentKey.scan = ip.Event.KeyEvent.wVirtualScanCode;
-	keyCount = ip.Event.KeyEvent.wRepeatCount;
+	currentKey.unicode = xip.ichar;
+	currentKey.scan = xip.ir.Event.KeyEvent.wVirtualScanCode;
+	keyCount = xip.ir.Event.KeyEvent.wRepeatCount;
 
-	if (ip.Event.KeyEvent.dwControlKeyState & 
-		(LEFT_ALT_PRESSED | RIGHT_ALT_PRESSED))
-	{
-		switch (currentKey.scan)
-		{
-		case PCK_ALT_E:     /* letter 'E' */
-			currentKey.ascii = 0;
-			break;
-		}
-	} else if (ip.Event.KeyEvent.dwControlKeyState & 
-		(LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED))
+	if (xip.ir.Event.KeyEvent.dwControlKeyState & (LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED))
 	{
 		switch (currentKey.scan)
 		{
@@ -2891,12 +2950,12 @@ public int win32_kbhit(void)
 			currentKey.scan = PCK_CTL_DELETE;
 			break;
 		}
-	} else if (ip.Event.KeyEvent.dwControlKeyState & SHIFT_PRESSED)
+	} else if (xip.ir.Event.KeyEvent.dwControlKeyState & SHIFT_PRESSED)
 	{
 		switch (currentKey.scan)
 		{
 		case PCK_SHIFT_TAB: /* tab */
-			currentKey.ascii = 0;
+			currentKey.unicode = 0;
 			break;
 		}
 	}
@@ -2927,7 +2986,7 @@ public char WIN32getch(void)
 		return (char) win_unget_data;
 	}
 
-	// Return the rest of multibyte character from the prior call
+	/* Return the rest of multibyte character from the prior call */
 	if (utf8_next_byte < utf8_size)
 	{
 		ascii = utf8[utf8_next_byte++];
@@ -2949,16 +3008,19 @@ public char WIN32getch(void)
 				return ('\003');
 		}
 		keyCount--;
-		// If multibyte character, return its first byte
-		if (currentKey.unicode > 0x7f)
+		/* If multibyte character, return its first byte */
+		if (is_ascii_char(currentKey.unicode))
+			ascii = (char) currentKey.unicode;
+		else
 		{
-			utf8_size = WideCharToMultiByte(CP_UTF8, 0, &currentKey.unicode, 1, (LPSTR) &utf8, sizeof(utf8), NULL, NULL);
+			char *up = utf8;
+			put_wchar(&up, currentKey.unicode);
+			utf8_size = up - utf8;
 			if (utf8_size == 0)
 				return '\0';
 			ascii = utf8[0];
 			utf8_next_byte = 1;
-		} else
-			ascii = currentKey.ascii;
+		}
 		/*
 		 * On PC's, the extended keys return a 2 byte sequence beginning 
 		 * with '00', so if the ascii code is 00, the next byte will be 
