@@ -994,7 +994,7 @@ v641  7/10/23   Fix release.
 v642  7/10/23   Fix release.
 v643  7/20/23   Fix crash on Windows with -o.
 v644            Improve ^C on non-terminated pipe; fix crash when files are
-                deleted; support large files on Windows; fix # bug.
+                deleted; support large files and non-BMP chars on Windows; fix # bug.
 */
 
 char version[] = "644x";
