@@ -16,11 +16,19 @@
 * Improve behavior of interrupt while reading non-terminated pipe
   (github #414).
 
+* Improve parsing of -j, -x and -# options (github #393).
+
 * Support files larger than 4GB on Windows (github #417).
+
+* Support entry of Unicode chars larger than U+FFFF on Windows (github #391).
 
 * Fix bug where # substitution failed after viewing help (github #420).
 
 * Fix crash if files are deleted while less is viewing them (github #404).
+
+* Workaround unreliable ReadConsoleInputW behavior with non-ASCII input.
+
+* Fix -J display when searching for non-ASCII characters (github #422).
 
 ======================================================================
 
